--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.3",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.3",
+    "sequelize": "^6.37.1"
   }
 }
